--- a/templates/eve_holder/events/event_cancel.html
+++ b/templates/eve_holder/events/event_cancel.html
@@ -11,7 +11,7 @@
                 <form action="{% url 'eve_holder:event_cancel' item.id %}" method="post">
                     {% csrf_token %}
                     <input class="btn btn-danger" type="submit" value="Yes">
-                    <a class="btn btn-warning" href="{% url 'eve_holder:visitor' %}">No</a>
+                    <a class="btn btn-warning" href="{% url 'eve_holder:visitor_registered_events' %}">No</a>
                 </form>
 
             </div>
