--- a/static/css/all_events.css
+++ b/static/css/all_events.css
@@ -2,12 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Castoro:ital@1&display=swap');
 
-:root{
+:root {
     --clr-light: #fff;
     --br: .5em;
 }
 
-#navbar{
+#navbar {
     position: sticky;
     top: 0;
     z-index: 2;
@@ -17,7 +17,7 @@
     padding: 0;
 }
 
-body{
+body {
     font-family: 'Commissioner', sans-serif;
     min-height: 100vh;
     /*display: grid;*/
@@ -26,18 +26,18 @@ body{
     color: var(--clr-light);
 }
 
-.above{
+.above {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#inspire-pic{
+#inspire-pic {
     top: 0;
     filter: brightness(40%);
 }
 
-.inspiration-text{
+.inspiration-text {
     display: flex;
     justify-content: center;
     font-family: 'Castoro', serif;
@@ -46,20 +46,21 @@ body{
     position: absolute;
 
 }
-#sentence1, #sentence2{
+
+#sentence1, #sentence2 {
     font-size: 30px;
 }
 
-.inspiration-text > .author{
+.inspiration-text > .author {
     font-size: 18px;
     padding-top: 15px;
 }
 
-.inspiration-text > .section-separator{
+.inspiration-text > .section-separator {
     font-size: 70px;
 }
 
-.event-cards{
+.event-cards {
     margin-right: 20px;
     margin-left: 20px;
     padding-top: 100px;
@@ -72,18 +73,18 @@ body{
     margin-bottom: 70px;
 }
 
-#event-container{
+#event-container {
     border-radius: var(--br);
     padding: 20px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     background: white;
 }
 
-p{
+p {
     margin: 0;
 }
 
-.event-name{
+.event-name {
     font-weight: bold;
     color: #142850;
     word-wrap: break-word;
@@ -91,21 +92,21 @@ p{
     font-size: 27px;
 }
 
-.host-name{
+.host-name {
     font-size: 15px;
 }
 
-.stats{
+.stats {
     margin-top: -13px;
 }
 
-.event{
+.event {
     position: relative;
     width: 12.5em;
     object-fit: cover;
 }
 
-img{
+img {
     max-width: 100%;
 }
 
@@ -118,34 +119,34 @@ img{
     text-align: center;
 }
 
-.host-picture > img, .host-picture > .streamer > .icon > img{
+.host-picture > img, .host-picture > .streamer > .icon > img {
     width: 3em;
     height: 3em;
     border-radius: 50%;
     border: 1px solid #142850;
 }
 
-.front{
+.front {
     transition: 250ms;
 }
 
-.front > .stats{
+.front > .stats {
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: #142850;
 }
 
-.front > .thumbnail{
+.front > .thumbnail {
     border-radius: var(--br);
     /*height: 50%*/
 }
 
-.front > .event-name{
+.front > .event-name {
     margin: .75em 0;
 }
 
-.more-detail{
+.more-detail {
     border: 0;
     background: darkorange;
     border-radius: 100vw;
@@ -153,12 +154,12 @@ img{
     padding: .5em 1.5em;
 }
 
-.more-detail:hover{
+.more-detail:hover {
     text-decoration: none;
     color: black;
 }
 
-.back{
+.back {
     opacity: 0;
     position: absolute;
     top: 52%;
@@ -171,7 +172,7 @@ img{
     transition: transform 250ms ease, opacity 150ms linear;
 }
 
-.event-info{
+.event-info {
     margin: 0.5em 0;
     columns: 2;
     column-rule: 1px solid #2c6ed5;
@@ -183,7 +184,7 @@ img{
     text-align: center;
 }
 
-.back > .event-info > .amount > span{
+.back > .event-info > .amount > span {
     font-size: .85rem;
     display: block;
 }
@@ -193,24 +194,24 @@ img{
     justify-content: space-around;
 }
 
-.event-container:hover > .event > .front > .event-name{
+.event-container:hover > .event > .front > .event-name {
     animation: event_name 250ms forwards;
     color: #142850;
 }
 
-.event-container:hover > .event > .front{
+.event-container:hover > .event > .front {
     transform: translateY(-30%) scale(.8);
 }
 
-.event-container:hover > .event >.front > .stats> .host-picture, .event-container:hover > .event > .front > .stats{
+.event-container:hover > .event > .front > .stats > .host-picture, .event-container:hover > .event > .front > .stats {
     opacity: 0;
 }
 
-.event-container:hover > .event > .back{
+.event-container:hover > .event > .back {
     opacity: 1;
 }
 
-.short-description{
+.short-description {
     text-align: left;
     color: #142850;
     font-size: 11px;
@@ -231,7 +232,7 @@ img{
         opacity: 0;
         transform: scale(1.2);
     }
-    100%{
+    100% {
         text-align: center;
         opacity: 1;
         transform: scale(1.2);
