--- a/static/css/login.css
+++ b/static/css/login.css
@@ -1,29 +1,28 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     background: #142850;
 }
 
-.row{
+.row {
     background: white;
-    margin: auto;
-    margin-top: 90px;
+    margin: 90px auto auto;
     width: 640px;
     border-radius: 30px;
 }
 
 
-img{
+img {
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
     border-bottom: 30px;
 }
 
-.btn1{
+.btn1 {
     border: none;
     outline: none;
     height: 35px;
@@ -33,7 +32,7 @@ img{
     font-weight: bold;
 }
 
-.btn1:hover{
+.btn1:hover {
     background: navy;
     border: 1px solid;
     color: white;
