--- a/templates/eve_holder/navbar.html
+++ b/templates/eve_holder/navbar.html
@@ -3,6 +3,20 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+<div class="modal bs-logout-modal-sm">
+    <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+            <div class="modal-header"><h4>Logout <i class="fa fa-lock"></i></h4></div>
+            <div class="modal-body">
+                <i class="fa fa-question-circle">Are you sure you want to log-off?</i>
+            </div>
+            <div class="modal-footer">
+                <a class="btn btn-primary btn-block" href="{% url 'eve_holder:logout' %}">Logout</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
     <span id="logo">EVEHOLDER</span>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -37,20 +51,6 @@
                 </div>
             </li>
         </ul>
-
-        <div class="modal bs-logout-modal-sm" id="logout-modal">
-            <div class="modal-dialog modal-sm">
-                <div class="modal-content">
-                    <div class="modal-header"><h4>Logout <i class="fa fa-lock"></i></h4></div>
-                    <div class="modal-body">
-                        <i class="fa fa-question-circle">Are you sure you want to log-off?</i>
-                    </div>
-                    <div class="modal-footer">
-                        <a class="btn btn-primary btn-block" href="{% url 'eve_holder:logout' %}">Logout</a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
         <form class="form-inline my-2 my-lg-0" action="{% url 'eve_holder:search_event' %}" method="post">
             {% csrf_token %}
