--- a/templates/eve_holder/events/event_detail.html
+++ b/templates/eve_holder/events/event_detail.html
@@ -135,7 +135,7 @@
                                                     <div class="row">
                                                     <div class="col-sm-3 col-md-2 col-5">
                                                         <a class="btn btn-sm btn-danger"
-                                                           href="{% url 'eve_holder:event_cancel' event.id %}">cancel</a>
+                                                           href="{% url 'eve_holder:event_cancel' event.id %}">Cancel</a>
                                                     </div>
                                                 {% endif %}
                                             {% endif %}
@@ -143,20 +143,17 @@
                                                 <a class="btn btn-sm btn-secondary"
                                                    href="{% url 'eve_holder:visitor_registered_events' %}">Back</a>
                                             </div>
-
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-
-
                             </div>
-
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
 {% endblock %}
