--- a/templates/eve_holder/hosts/host_event_detail.html
+++ b/templates/eve_holder/hosts/host_event_detail.html
@@ -100,6 +100,13 @@
                                                     {% endif %}
                                                 </div>
                                             </div>
+                                            <hr>
+                                            <div class="row">
+                                                <div class="col-sm-3 col-md-2 col-5">
+                                                <a class="btn btn-sm btn-warning" style="padding-right: 15px; padding-left: 15px"
+                                                   href="{% url 'eve_holder:edit_event' event.id %}">Edit</a>
+                                                </div>
+                                            </div>
 
                                         </div>
                                         <div class="tab-pane fade" id="picture" role="tabpanel" aria-labelledby="picture-tab">
