--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,41 +7,28 @@ body {
     margin-right: 20px;
 }
 
-.alert {
+.msg-box {
     padding: 10px;
-    background-color: #ffa31a;
     color: white;
-    width: fit-content;
+    width: auto;
     z-index: 1;
     margin-top: 5px;
-    margin-bottom: 1px;
+}
+
+.warning {
+    background-color: #ffa31a;
 }
 
 .danger {
-    padding: 10px;
     background-color: #f44336;
-    color: white;
-    width: fit-content;
-    z-index: 1;
-    margin-top: 5px;
 }
 
 .success {
-    padding: 10px;
     background-color: #5cd65c;
-    color: white;
-    width: fit-content;
-    z-index: 1;
-    margin-top: 5px;
 }
 
 .info {
-    padding: 10px;
     background-color: #33adff;
-    color: white;
-    width: fit-content;
-    z-index: 1;
-    margin-top: 5px;
 }
 
 .closebtn {
