--- a/templates/eve_holder/navbar.html
+++ b/templates/eve_holder/navbar.html
@@ -2,7 +2,6 @@
 <link rel="stylesheet" type="text/css" href="{% static '/css/navbar.css' %}">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
 <div class="modal bs-logout-modal-sm">
     <div class="modal-dialog modal-sm">
         <div class="modal-content">
@@ -19,6 +18,9 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
     <span id="logo">EVEHOLDER</span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             {% if user.groups.all.0.name == "Visitor" %}
