--- a/templates/eve_holder/notifications.html
+++ b/templates/eve_holder/notifications.html
@@ -5,13 +5,13 @@
 
         {% for notify in notifications %}
             {% if notify.level == 'info' %}
-                <div class="info w3-animate-opacity w3-round">
+                <div class="info w3-animate-opacity w3-round msg-box">
                     <strong>Info Updated: </strong> {{ notify }}
                     <a class="closebtn" href="{% url 'eve_holder:close_notification' notify.id %}"
                        onclick="this.parentElement.style.display='none';">&times;</a>
                 </div>
             {% elif notify.level == 'warning' %}
-                <div class="alert w3-animate-opacity w3-round">
+                <div class="warning w3-animate-opacity w3-round msg-box">
                     <strong>Warning: </strong> {{ notify }}
                     <a class="closebtn" href="{% url 'eve_holder:close_notification' notify.id %}"
                        onclick="this.parentElement.style.display='none';">&times;</a>
