--- a/templates/eve_holder/visitors/visitors_list.html
+++ b/templates/eve_holder/visitors/visitors_list.html
@@ -53,7 +53,7 @@
                     <tbody>
                         {% for visitor in visitor_registered_events %}
                         <tr>
-                            <td>{{ visitor.id }}</td>
+                            <td></td>
                             <td>{{ visitor.name }}</td>
                             <td>{{ visitor.email }}</td>
                             <td>{{ visitor.phone_num }}</td>
@@ -61,7 +61,7 @@
                         {% endfor %}
                         <!--- last table row --->
                         <tr>
-                            <td colspan="4"></td>
+                            <th colspan="4"></th>
                         </tr>
                     </tbody>
                 </table>
