new create event template

--- a/static/css/create_event.css
+++ b/static/css/create_event.css
@@ -6,7 +6,7 @@
 body {
     /*background-image: linear-gradient(45deg, rgba(7, 18, 85, 0.6), rgba(37, 67, 255, 0.7));*/
     /*background: #031b88;*/
-    background-image: linear-gradient(45deg, #071255, #aab6fb);
+    background-image: linear-gradient(45deg, #071255, #333d7c);
     /*max-height: 100%;*/
     max-width: 100%;
     display: block;
@@ -17,7 +17,7 @@ body {
 .regform {
     width: 580px;
     /*background-color: #fdebaa;*/
-    background-color: rgba(255, 244, 204, 0.8);
+    background-color: rgba(255, 255, 255, 1);
     border-radius: 10px 10px 0 0;
     color: #031b88;
     padding: 10px 0 10px 0;
@@ -31,7 +31,7 @@ body {
     width: 580px;
     height: 450px;
     border-radius: 0 0 10px 10px;
-    background-color: rgba(255, 244, 204, 0.6);
+    background-color: rgba(255, 255, 255, 0.7);
     box-shadow: antiquewhite;
     display: flex;
     margin: auto;
@@ -67,7 +67,7 @@ body {
     outline: none;
     height: 26px;
     width: 100%;
-    background-color: #cccccc;
+    background-color: #ffffff;
     font-weight: bold;
     margin: auto;
     border-radius: 20px;
