--- a/templates/eve_holder/hosts/host.html
+++ b/templates/eve_holder/hosts/host.html
@@ -6,9 +6,9 @@
 
     <br>
     <div class="row">
-        <div class="col-md">
-            <div class="card card-body">
-                <h5>Your Events</h5>
+        <div class="col-md" >
+            <div class="card card-body" style="align-self: center">
+                <h5 style="color: #031b88">Your Events</h5>
                 <table class="table table-sm">
                     <tr>
                         <th>Event</th>
