--- a/templates/eve_holder/hosts/host_my_account.html
+++ b/templates/eve_holder/hosts/host_my_account.html
@@ -60,7 +60,7 @@
                     </div>
                 </div>
                 <a class="btn btn-outline-info  btn-sm btn-block"
-                   href="{% url 'eve_holder:visitor_update_information' %}">Update Account</a>
+                   href="{% url 'eve_holder:host_update_information' %}">Update Account</a>
                 <a class="btn btn-outline-danger  btn-sm btn-block" href="{% url 'eve_holder:delete_account' %}">Delete
                     Account</a>
             </div>
