--- a/static/css/join_event.css
+++ b/static/css/join_event.css
@@ -1,26 +1,61 @@
-body {
-    font-family: Calisto MT;
-    color: #031b88;
-    background-color: #071255;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.profile-card {
-    width: 500px;
-    margin: auto;
+body{
+    height: 100vh;
+    width: 100vh;
+    background-position: center;
+    background-size: cover;
+}
+
+.container{
+    height: 85vh;
+    width: 37vw;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.top img{
+    height: 40vh;
+    width: 37vw;
+    margin-left: -15px;
+}
+
+.bottom{
+    height: 40vh;
     background-color: #ffffff;
-    box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.5);
 }
 
-.image-container {
-    width: 498px;
-    position: relative;
+.login-element{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.info {
+.login-element h3{
+    margin-top: 24px;
     color: #031b88;
-    margin-right: 16px;
+    font-weight: bold;
 }
 
-.main {
-    padding: 15px;
+.btn{
+    width: 125px;
+    height: 30px;
+    background-image: linear-gradient(45deg, #6096fd, #fb7b8e);
+    display: inline-block;
+    text-align: center;
+    margin-top: 14px;
+    border: none;
+    border-radius: 15px;
+    color: white;
+}
+
+.btn:hover{
+    background-image: linear-gradient(45deg, #faa7b8,#96b7f7);
+    color: white;
 }
