--- a/templates/eve_holder/accounts/login.html
+++ b/templates/eve_holder/accounts/login.html
@@ -37,16 +37,19 @@
                             <input type="password" name="password" placeholder=" Password..." class="username my-3">
                         </div>
                     </div>
+
                     <div class="form-row">
                         <div class="col-lg-9">
                             <button type="submit" class="btn1 mt-3 mb-3">Login</button>
                         </div>
+                    </div>
+
+                    <div class="form-row">
                         {% for message in messages %}
                             <p id="messages">{{ message }}</p>
                         {% endfor %}
                         <hr>
-                        <a href="#">Forget Password</a>
-                        or <a href="{% url 'eve_holder:homepage' %}">Back</a>
+                        <p><a href="#">Forget Password</a> or <a href="{% url 'eve_holder:homepage' %}">Back</a></p>
                         <p>Don't have an account? <a href="{% url 'eve_holder:register' %}">Register here</a></p>
                     </div>
                 </form>
