--- a/templates/eve_holder/join_event.html
+++ b/templates/eve_holder/join_event.html
@@ -13,6 +13,10 @@
     <br>
     <div class="container-join">
         <div class="top">
+            <div class="inspiration-text">
+                <div id="sentence">"The journey of a thousand miles begins with one step."</div>
+                <div class="author">-Lao Tzu-</div>
+            </div>
             <img src="{% static "images/join_event.jpg" %}">
         </div>
         <div class="bottom">
