--- a/templates/eve_holder/hosts/create_event.html
+++ b/templates/eve_holder/hosts/create_event.html
@@ -78,6 +78,13 @@
 
                 <div class="row" style="margin-top: -20px">
                     <div class="col-md-10" style="margin-left: 40px">
+                        {% for message in messages %}
+                            <p id="messages">{{ message }}</p>
+                        {% endfor %}
+                </div>
+
+                <div class="row" style="margin-top: -20px">
+                    <div class="col-md-10" style="margin-left: 40px">
                         {% if btn == "Create" %}
                         <button type="submit" class="btn1 mt-3 mb-3" name="click" style="line-height: 28px">Create Event</button>
                         {% elif btn == "Edit" %}
