--- a/templates/eve_holder/hosts/host_event_detail.html
+++ b/templates/eve_holder/hosts/host_event_detail.html
@@ -100,6 +100,7 @@
                                                     {% endif %}
                                                 </div>
                                             </div>
+                                            {% if  event.event_host.name == host_name %}
                                             <hr>
                                             <div class="row">
                                                 <div class="col-sm-3 col-md-2 col-5">
@@ -107,6 +108,7 @@
                                                    href="{% url 'eve_holder:edit_event' event.id %}">Edit</a>
                                                 </div>
                                             </div>
+                                            {% endif %}
 
                                         </div>
                                         <div class="tab-pane fade" id="picture" role="tabpanel" aria-labelledby="picture-tab">
