--- a/templates/eve_holder/accounts/register.html
+++ b/templates/eve_holder/accounts/register.html
@@ -90,7 +90,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <button type="submit" class="btn1 mt-3 mb-3" name="click" style="">Register</button>
+                <button type="submit" class="btn-login mt-3 mb-3" name="click" style="">Register</button>
             </div>
         </form>
     </div>
