--- a/static/css/register.css
+++ b/static/css/register.css
@@ -12,6 +12,11 @@ body {
     object-fit: cover;
 }
 
+.image{
+    width: 100%;
+    height: 100%;
+}
+
 .regform {
     width: 580px;
     background-color: rgba(20, 40, 80, 1);
@@ -51,19 +56,22 @@ body {
     font-size: 12px;
 }
 
-.btn1 {
+.btn-login {
     border: none;
     outline: none;
     height: 26px;
-    width: 100%;
-    background-color: #cccccc;
+    width: 400px;
+    color: #ffffff;
+    background-image: linear-gradient(120deg, #031b88, #2c6ed5);
     font-weight: bold;
+    font-size: 14px;
     margin: auto;
+    margin-left: 35%;
     border-radius: 20px;
 }
 
-.btn1:hover {
-    background: navy;
+.btn-login:hover {
+    background-image: linear-gradient(30deg, #2c6ed5, #031b88);
     border: 1px solid;
     color: white;
 }
