--- a/templates/eve_holder/accounts/register.html
+++ b/templates/eve_holder/accounts/register.html
@@ -63,7 +63,7 @@
             </div>
             <div class="form-group col-md-6">
                 <select class=" form-control my-3" name="type">
-                    <option value="Visitors">Visitor</option>
+                    <option value="Visitor">Visitor</option>
                     <option value="Host">Host</option>
                 </select>
             </div>
