--- a/static/css/register.css
+++ b/static/css/register.css
@@ -12,7 +12,7 @@ body {
     object-fit: cover;
 }
 
-.image{
+.image {
     width: 100%;
     height: 100%;
 }
@@ -65,8 +65,7 @@ body {
     background-image: linear-gradient(120deg, #031b88, #2c6ed5);
     font-weight: bold;
     font-size: 14px;
-    margin: auto;
-    margin-left: 35%;
+    margin: auto auto auto 35%;
     border-radius: 20px;
 }
 
