--- a/templates/eve_holder/hosts/create_event.html
+++ b/templates/eve_holder/hosts/create_event.html
@@ -3,96 +3,101 @@
 
 <html lang="en">
 
-    <head>
-        <title>Registration</title>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    </head>
+<head>
+    <title>Registration</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+</head>
 {% block content %}
     <br>
-        <div class="regform">
-            <span style="font-size: 16px; font-weight: bold">Create Event Form</span>
-        </div>
-        <div class="main">
-            <form action="" method="post">
-                {% csrf_token %}
+    <div class="regform">
+        <span style="font-size: 16px; font-weight: bold">Create Event Form</span>
+    </div>
+    <div class="main">
+        <form action="" method="post">
+            {% csrf_token %}
 
-                <div class="row row1">
-                    <div class="form-group col-md-4" style="margin-left: 20px">
-                        <label class="col-form-label namecol ">Event Name: </label>
-                    </div>
-                    <div class="form-group col-md-6">
-                        {{ form.event_name }}
-                    </div>
+            <div class="row row1">
+                <div class="form-group col-md-4" style="margin-left: 20px">
+                    <label class="col-form-label namecol ">Event Name: </label>
                 </div>
-
-                <div class="row row1">
-                    <div class="form-group col-md-4" style="margin-left: 20px">
-                        <label class="col-form-label namecol ">Description: </label>
-                    </div>
-                    <div class="form-group col-md-6 " style="margin-top: -10px">
-                        {{ form.event_description }}
-                    </div>
+                <div class="form-group col-md-6">
+                    {{ form.event_name }}
                 </div>
+            </div>
 
-                <div class="row row1">
-                    <div class="form-group col-md-4" style="margin-left: 20px">
-                        <label class="col-form-label namecol ">Location: </label>
-                    </div>
-                    <div class="form-group col-md-6" style="margin-top: -10px">
-                        {{ form.event_location }}
-                    </div>
+            <div class="row row1">
+                <div class="form-group col-md-4" style="margin-left: 20px">
+                    <label class="col-form-label namecol ">Description: </label>
                 </div>
-
-                <div class="row row1">
-                    <div class="form-group col-md-4" style="margin-left: 20px">
-                        <label class="col-form-label namecol ">Event Date: </label>
-                    </div>
-                    <div class="form-group col-md-6" style="margin-top: -10px">
-                        {{ form.event_date }}
-                    </div>
+                <div class="form-group col-md-6 " style="margin-top: -10px">
+                    {{ form.event_description }}
                 </div>
+            </div>
 
-                <div class="row row1">
-                    <div class="form-group col-md-4" style="margin-left: 20px">
-                        <label for="" class="col-form-label namecol ">Date: </label>
-                    </div>
-                    <div class="form-group col-md-3">
-                        {{ form.pub_date }}
-                        <label class="namesm label">Publish Date</label>
-                    </div>
-                    <div class="form-group col-md-3">
-                        {{ form.end_date }}
-                        <label class="namesm label">End Date</label>
-                    </div>
+            <div class="row row1">
+                <div class="form-group col-md-4" style="margin-left: 20px">
+                    <label class="col-form-label namecol ">Location: </label>
                 </div>
-
-                <div class="row row1">
-                    <div class="form-group col-md-4" style="margin-left: 20px" >
-                        <label class="col-form-label namecol ">Event Amount Accept: </label>
-                    </div>
-                    <div class="form-group col-md-6" style="margin-top: -10px">
-                        {{ form.amount_accepted }}
-                    </div>
+                <div class="form-group col-md-6" style="margin-top: -10px">
+                    {{ form.event_location }}
                 </div>
+            </div>
 
-                <div class="row" style="margin-top: -20px">
-                    <div class="col-md-10" style="margin-left: 40px">
-                        {% for message in messages %}
-                            <p id="messages">{{ message }}</p>
-                        {% endfor %}
+            <div class="row row1">
+                <div class="form-group col-md-4" style="margin-left: 20px">
+                    <label class="col-form-label namecol ">Event Date: </label>
+                </div>
+                <div class="form-group col-md-6" style="margin-top: -10px">
+                    {{ form.event_date }}
+                </div>
+            </div>
+
+            <div class="row row1">
+                <div class="form-group col-md-4" style="margin-left: 20px">
+                    <label for="" class="col-form-label namecol ">Date: </label>
+                </div>
+                <div class="form-group col-md-3">
+                    {{ form.pub_date }}
+                    <label class="namesm label">Publish Date</label>
+                </div>
+                <div class="form-group col-md-3">
+                    {{ form.end_date }}
+                    <label class="namesm label">End Date</label>
+                </div>
+            </div>
+
+            <div class="row row1">
+                <div class="form-group col-md-4" style="margin-left: 20px">
+                    <label class="col-form-label namecol ">Event Amount Accept: </label>
+                </div>
+                <div class="form-group col-md-6" style="margin-top: -10px">
+                    {{ form.amount_accepted }}
+                </div>
+            </div>
+
+            <div class="row" style="margin-top: -20px">
+                <div class="col-md-10" style="margin-left: 40px">
+                    {% for message in messages %}
+                        <p id="messages">{{ message }}</p>
+                    {% endfor %}
                 </div>
 
                 <div class="row" style="margin-top: -20px">
                     <div class="col-md-10" style="margin-left: 40px">
                         {% if btn == "Create" %}
-                        <button type="submit" class="btn1 mt-3 mb-3" name="click" style="line-height: 28px">Create Event</button>
+                            <button type="submit" class="btn1 mt-3 mb-3" name="click" style="line-height: 28px">Create
+                                Event
+                            </button>
                         {% elif btn == "Edit" %}
-                        <button type="submit" class="btn1 mt-3 mb-3" name="click" style="line-height: 28px">Edit Event</button>
+                            <button type="submit" class="btn1 mt-3 mb-3" name="click" style="line-height: 28px">Edit
+                                Event
+                            </button>
                         {% endif %}
                     </div>
                 </div>
-            </form>
-        </div>
+            </div>
+        </form>
+    </div>
 {% endblock %}
 </html>
