--- a/templates/eve_holder/join_event.html
+++ b/templates/eve_holder/join_event.html
@@ -17,19 +17,19 @@
                 <div id="sentence-join">"The only impossible journey is the one you never begin."</div>
                 <div class="author-join">-Tony Robbins-</div>
             </div>
-            <img src="{% static "images/join_event.jpg" %}">
+            <img src="{% static "images/join_event.jpg" %}" alt="join event image">
         </div>
         <div class="bottom">
             <div class="login-element">
                 <form method="POST" action="">
                     {% csrf_token %}
                     <h3>Join {{ event.event_name }}</h3>
-                        <label class="join-label col-sm-6">Username</label>
-                        {{ form.name }}
-                        <label class="join-label col-sm-6">Email</label>
-                        {{ form.email }}
-                        <label class="join-label col-sm-6">Phone number</label>
-                        {{ form.phone_num }}
+                    <label class="join-label col-sm-6">Username</label>
+                    {{ form.name }}
+                    <label class="join-label col-sm-6">Email</label>
+                    {{ form.email }}
+                    <label class="join-label col-sm-6">Phone number</label>
+                    {{ form.phone_num }}
                     <button type="submit" class="btn-join">Join</button>
                 </form>
             </div>
